<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LicensesProposeWidget</class>
 <widget class="QWidget" name="LicensesProposeWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>698</width>
    <height>82</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QGroupBox" name="analogGroupBox">
     <property name="title">
      <string>Licensing</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_11" stretch="0,1">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_7">
        <item>
         <widget class="QCheckBox" name="analogViewCheckBox">
          <property name="text">
           <string>Use an analog license to view this camera</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <widget class="QPushButton" name="moreLicensesButton">
          <property name="text">
           <string>Get More Licenses...</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QnLicensesUsageWidget" name="licensesUsageWidget" native="true"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QnLicensesUsageWidget</class>
   <extends>QWidget</extends>
   <header location="global">ui/widgets/licensing/licenses_usage_widget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
